--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">XiyoumobileIM</string>
+    <string name="send_button_text">发送</string>
+    <string name="user_edit">请输入用户名</string>
+    <string name="userpass_edit">请输入密码</string>
+    <string name="login_button_text">登陆</string>
+    <string name="login_title">登陆</string>
 </resources>
